Removed space from executable.

--- a/Random Playlist.csproj
+++ b/Random Playlist.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Random_Playlist</RootNamespace>
-    <AssemblyName>Random Playlist</AssemblyName>
+    <AssemblyName>Random.Playlist</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
